# TelegramAgentBot

./: .env.example  .gitignore  AGENTS.md  README.md  README.zh-cn.md  README_CN.md  pyproject.toml
.github/workflows/: check.yml  codex_review_gate.yml  secret-scan.yml
doc/: telegram-bot-features.md
docs/: agent_backend_plugins.md  agent_backend_plugins.zh-cn.md  claude-deepseek.env.example  github_codex_bridge.md  github_codex_bridge.sample.json  github_codex_bridge.zh-cn.md  vps_cleanup.md  vps_cleanup.zh-cn.md
plugins/socket_backend/: README.md  pyproject.toml
plugins/socket_backend/examples/launchd/: io.github.telegramcodexbot.agent-node.plist  io.github.telegramcodexbot.center-bot.plist
plugins/socket_backend/examples/systemd/: socket-center.env.example  telegram-codex-agent-node.service  telegram-codex-bot.socket-center.service
plugins/socket_backend/src/telegram_codex_bot_socket_backend/: __init__.py  agent_node.py  backend.py  protocol.py
scripts/: bootstrap-linux.sh  bootstrap-macos.sh  install-vps-cleanup.sh  restart.sh
src/ccbot/: __init__.py  account_manager.py  bot.py  bridge.py  config.py  hook.py  main.py  session.py  session_monitor.py  terminal_parser.py  tmux_manager.py  updater.py  utils.py
src/telegram_agent_bot/: __init__.py  account_manager.py  agent_io.py  agent_profile.py  bot.py  bridge.py  config.py  hook.py  main.py  maintenance_cleanup.py  model_catalog.py  monitor_state.py  output_mode.py  session.py  session_monitor.py  terminal_parser.py  tmux_manager.py  transcribe.py  transcript_parser.py  updater.py  (+1 more)
tests/: conftest.py
(+146 files in other folders)
