[project]
name = "telegram-codex-bot-socket-backend"
version = "0.1.0"
description = "Socket backend plugin for TelegramAgentBot center-bot / agent-node deployments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "telegram-codex-bot>=0.2.0",
]

[project.scripts]
telegram-codex-agent-node = "telegram_codex_bot_socket_backend.agent_node:main"

[project.entry-points."telegram_codex_bot.backends"]
socket-cluster = "telegram_codex_bot_socket_backend.backend:SocketClusterBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_codex_bot_socket_backend"]
