[project]
name = "telegram-agent-bot-socket-backend"
version = "0.1.0"
description = "Socket backend plugin for TelegramAgentBot center-bot / agent-node deployments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "telegram-agent-bot>=1.0.0",
]

[project.scripts]
telegram-agent-node = "telegram_agent_bot_socket_backend.agent_node:main"

[project.entry-points."telegram_agent_bot.backends"]
socket-cluster = "telegram_agent_bot_socket_backend.backend:SocketClusterBackend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_agent_bot_socket_backend"]
